<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.docproductions.hackernewsreader.storylist.StoryListActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/stat_notify_sync_noanim"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_top_stories"
        android:orderInCategory="101"
        android:title="@string/action_top_stories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_best_stories"
        android:orderInCategory="102"
        android:title="@string/action_best_stories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_new_stories"
        android:orderInCategory="103"
        android:title="@string/action_new_stories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_ask_stories"
        android:orderInCategory="104"
        android:title="@string/action_ask_stories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_stories"
        android:orderInCategory="105"
        android:title="@string/action_show_stories"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_jobs_stories"
        android:orderInCategory="106"
        android:title="@string/action_jobs_stories"
        app:showAsAction="never" />
</menu>
